Edit header padding to avoid horizontal readability issues

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.75rem 0;
+    padding: 1.75rem;
 }
 .link-no-decor {
   text-decoration: none;
